@@ -17,18 +17,20 @@ if (!class_exists('OAuthException')) {
   }
 }
 
-class OAuthConsumer {
-  public $key;
-  public $secret;
+if (!class_exists('OAuthConsumer')) {
+  class OAuthConsumer {
+    public $key;
+    public $secret;
 
-  function __construct($key, $secret, $callback_url=NULL) {
-    $this->key = $key;
-    $this->secret = $secret;
-    $this->callback_url = $callback_url;
-  }
+    function __construct($key, $secret, $callback_url=NULL) {
+      $this->key = $key;
+      $this->secret = $secret;
+      $this->callback_url = $callback_url;
+    }
 
-  function __toString() {
-    return "OAuthConsumer[key=$this->key,secret=$this->secret]";
+    function __toString() {
+      return "OAuthConsumer[key=$this->key,secret=$this->secret]";
+    }
   }
 }
 
@@ -54,7 +56,8 @@ class OAuthToken {
     return "oauth_token=" .
            OAuthUtil::urlencode_rfc3986($this->key) .
            "&oauth_token_secret=" .
-           OAuthUtil::urlencode_rfc3986($this->secret);
+           OAuthUtil::urlencode_rfc3986($this->secret) .
+           "&oauth_callback_confirmed=true";
   }
 
   function __toString() {
